--- a/AccountService/AccountService/src/main/resources/application.properties
+++ b/AccountService/AccountService/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+
 server.port = 8087
 spring.application.name=ACCOUNT-SERVICE
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bankUser?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=pass@word1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.main.allow-circular-references=true
