--- a/CustomerService/CustomerService/src/main/resources/application.properties
+++ b/CustomerService/CustomerService/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port = 8086
 spring.application.name=CUSTOMER-SERVICE
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bankUser?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=pass@word1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create-drop
