--- a/CustomerService/CustomerService/src/main/resources/application.properties
+++ b/CustomerService/CustomerService/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+#security.basic.enabled=false
 server.port = 8086
 spring.application.name=CUSTOMER-SERVICE
 
@@ -13,4 +15,6 @@ spring.main.allow-circular-references=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.jackson.serialization.fail-on-empty-beans=false
 
